# covenant

./: .gitignore  COMPILER.md  Cargo.toml  DESIGN.md  ERROR_CODES.md  QUERY_SEMANTICS.md  README.md  STORAGE.md  grammar.ebnf  prior-art.md  tmpclaude-6c9c-cwd
.claude/: CLAUDE.md  settings.local.json
.config/: nextest.toml
.github/workflows/: release.yml
crates/covenant-ast/: Cargo.toml
crates/covenant-ast/src/: decl.rs  expr.rs  lib.rs  metadata.rs  printer.rs  query.rs  snippet.rs  span.rs  stmt.rs  types.rs
crates/covenant-checker/: Cargo.toml
crates/covenant-checker/src/: checker.rs  diagnostics.rs  effects.rs  lib.rs  snippet_checker.rs  symbols.rs  types.rs
crates/covenant-checker/tests/: effects_test.rs  type_errors_test.rs
crates/covenant-cli/: Cargo.toml
crates/covenant-cli/src/: main.rs
crates/covenant-codegen/: Cargo.toml
crates/covenant-codegen/src/: data_graph.rs  embeddable.rs  gai_codegen.rs  ir.rs  lib.rs  snippet_wasm.rs  wasm.rs
crates/covenant-codegen/tests/: pure_functions.rs
crates/covenant-graph/: Cargo.toml
crates/covenant-graph/src/: graph.rs  lib.rs  query.rs
crates/covenant-lexer/: Cargo.toml
crates/covenant-lexer/src/: lib.rs  token.rs
crates/covenant-llm/: Cargo.toml
crates/covenant-llm/src/: cache.rs  explain.rs  lib.rs  prompts.rs  types.rs
crates/covenant-optimizer/src/: lib.rs
crates/covenant-optimizer/src/analysis/: mod.rs  reachability.rs  usage.rs
crates/covenant-optimizer/src/passes/: constant_fold.rs  dead_code.rs  mod.rs  unused_binding.rs
crates/covenant-parser/: Cargo.toml
crates/covenant-parser/src/: error.rs  lib.rs  parser.rs
crates/covenant-runtime/src/: error.rs  store.rs  types.rs
crates/covenant-storage/: Cargo.toml
crates/covenant-storage/src/: error.rs  lib.rs  memory.rs  node.rs  provider.rs  redb_storage.rs  sync.rs
crates/covenant-symbols/: Cargo.toml
crates/covenant-symbols/src/: cycle.rs  error.rs  extractor.rs  graph.rs  lib.rs  resolver.rs  symbol.rs
docs/: LFM-2.5-PROMPTS.md  patterns.md  reading-guide.md  syntax-examples.md  syntax-reference.md  tutorial.md
docs/design/: COMPILER.md  DESIGN.md  ERROR_CODES.md  EXTENSIBLE_KINDS.md  QUERY_SEMANTICS.md  REMAINING_PHASES_PLAN.md  RUNTIME_IMPORTS.md  WASI_INTEGRATION.md  grammar.ebnf
docs/guide/: embedded-queries.md  stdlib.md
docs/ideas/: use-cases.md
docs/specs/: ai-explain-schema.json  comment-generator.md  comment-workflow.md  explain-display.md  explain-generator.md  generated-comments.md  llm-code-generation.md
examples/: 01-hello-world.cov  02-pure-functions.cov  03-file-io.cov  04-error-handling.cov  05-http-server.cov  06-database-access.cov  07-multiple-effects.cov  08-effect-granularity.cov  09-higher-order.cov  10-pattern-matching.cov  11-extern-bindings.cov  12-using-bindings.cov  13-database-module.cov  14-project-queries.cov  14-test.ts  15-ast-mutations.cov  16-database-dialects.cov  17-advanced-sql.cov  19-data-nodes.cov  20-knowledge-base.cov  20-test.ts  21-structured-concurrency.cov  22-effect-kinds.cov  22-regex.cov  23-platform-abstraction.cov  24-cross-platform-storage.cov  25-text-operations.cov  30-doc-ingestion.cov  40-json-parse.cov  41-json-build.cov  42-json-validation.cov  50-debug.ts  50-embedded-query-simple.cov  50-test-comprehensive.ts  50-test.ts  51-symbol-metadata-test.cov  51-test.ts  52-relation-traversal.cov  52-test.ts  53-benchmark.ts  (+8 more)
examples/cross-platform-storage/: README.md
examples/database-queries/: README.md  database-access.cov
examples/error-handling/: README.md
examples/extern-bindings/: README.md
examples/file-io/: README.md
examples/http-server/: README.md
examples/json/: README.md
examples/metaprogramming/: README.md  metaprogramming.cov
examples/platform-abstraction/: README.md
examples/query-system/: README.md  build.sh  doc-ingestion.cov  embedded-query.cov  parameterized-query.cov  query-repl.ts  rag-query.cov  relation-traversal.cov  run-ingestion.ts
examples/structured-concurrency/: README.md
examples/syntax-fundamentals/: README.md
examples/using-bindings/: README.md
host/: run.mjs
install/: install.ps1  install.sh  shim.bat  shim.ps1  shim.sh
llm-context/: IMPLEMENTATION_SUMMARY.md  PROMPT_TEMPLATES.md  README.md  SPEC_CONDENSED.md  compiler_validator.py  example_selector.py  generation_harness.py  quickstart.sh  run_evaluation.py  test_suite.py
runtime/host/: package.json  query-runner.ts  run.deno.ts  run.mjs  run.node.ts
runtime/host/src/: capabilities.ts  loader.ts
runtime/std/console/tests/: console.test.cov
runtime/std/crypto/: crypto.cov
runtime/std/crypto/tests/: crypto.test.cov
runtime/std/filesystem/: fs.cov
runtime/std/filesystem/tests/: fs.test.cov
runtime/std/http/: http.cov
runtime/std/http/tests/: http.test.cov
runtime/std/impl/browser/: json.browser.cov  storage-doc.browser.cov  storage-kv.browser.cov
runtime/std/impl/deno/: fs.deno.cov  http.deno.cov  json.deno.cov  storage-doc.deno.cov  storage-kv.deno.cov
runtime/std/impl/node/: json.node.cov  storage-doc.node.cov  storage-kv.node.cov
runtime/std/impl/wasi/: json.wasi.cov  storage-doc.wasi.cov  storage-kv.wasi.cov
runtime/std/json/: json.cov
runtime/std/os/: os.cov
runtime/std/process/: process.cov
runtime/std/storage/: doc.cov  kv.cov
runtime/std/text/: regex.cov  text.cov
runtime/std/timers/: timers.cov
runtime/std/url/: url.cov
runtime/wit/: covenant-runtime.wit
scripts/: build-query-examples.sh
src/: lib.rs
std/storage/tests/: integration.test.cov
tests/: README.md  ai_generation_tests.rs  compiler_integration.rs  parse_all_examples.rs
tests/ai_generation/: example_descriptions.rs  mod.rs  prompts.rs
tests/common/: assertions.rs  fixtures.rs  mod.rs
tests/parser_tests/: example_discovery.rs  mod.rs  parse_all_examples.rs
tools/llm-eval/: SPEC_CONDENSED.md  deno.json
tools/llm-eval/src/: compiler-validator.ts  example-selector.ts  generation-harness.ts  mod.ts  run-evaluation.ts  test-suite.ts  types.ts
(+11 files in other folders)
