[package]
name = "covenant-symbols"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Symbol graph builder for the Covenant compiler (Phase 2)"

[dependencies]
covenant-ast = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
covenant-parser = { workspace = true }
